Adicionando melhorias aos sites do exercicio

--- a/03 - HTML e CSS/Exercicio07.html
+++ b/03 - HTML e CSS/Exercicio07.html
@@ -8,6 +8,12 @@
 <style>
 h1{
     text-align: center;
+    color: white;
+    padding: 30px;
+}
+body{
+    background-image:url(Imagens/numbers.jpg);
+    background-size: 80%;
 }
 
 </style>
