--- a/03 - HTML e CSS/Exercicio08.html
+++ b/03 - HTML e CSS/Exercicio08.html
@@ -8,6 +8,17 @@
     <style>
         h1{
             text-align: center;
+            background-color: rgba(255, 255, 255, 0.21);
+            padding: 10px;
+        }
+        body{
+            background-image:url('Imagens/time.jpg');
+            background-size: 80%;
+        }
+
+        form{
+            background-color: rgba(124, 124, 124, 0.61);
+            padding: 20px;
         }
     </style>
 
@@ -19,7 +30,8 @@
     <div class="row">
         <div class="col"></div>
         <div class="col">
-            <h1>Digite o horário atual</h1>
+            <form action="">
+                <h1>Digite o horário atual</h1>
             <p></p>
             <input type="time" datetime="hh:mm" name="" id="" class="form-control">
             <p></p>
@@ -37,6 +49,7 @@
             <p></p>
             <input type="radio" name="" id="berlim">
             <label for="berlom">Berlim</label>
+            </form>
 
         </div>
         <div class="col"></div>
