--- a/03 - HTML e CSS/Exercicio10.html
+++ b/03 - HTML e CSS/Exercicio10.html
@@ -5,19 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 10</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <style>
         h1, h2{
             text-align: center;
         }
+        body{
+            background-color: lightblue !important;
+            background-image:url('Imagens/peoplevoting.webp');
+            background-size: 85%;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+        img{
+            max-width: 1%;
+            max-height: 30%;
+            align-content: flex-end;
+            vertical-align: bottom;
+            padding: 20px;
+        }
+        div{
+            background-color: rgba(255, 255, 255, 0.218);
+            
+        }
+    
     </style>
 
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
     <div class="row">
         <div class="col">
-
+            <img src="Imagens/6971160_vote_screen_icon.png" class="img-fluid " alt="">
         </div>
         <div class="col">
             <h1>Votação:</h1>
