--- a/03 - HTML e CSS/Exercicio13.html
+++ b/03 - HTML e CSS/Exercicio13.html
@@ -45,17 +45,7 @@
                 <th>Gênero</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Leonardo</td>
-                <td>10</td>
-                <td>8</td>
-                <td>9</td>
-                <td>Aprovado</td>
-                <td>Masculino</td>
-            </tr>
-        </tbody>
+        <tbody id="tabela"> </tbody>
 
 
 
