correção na pesquisa

--- a/04 - JavaScript/Avaliação/Avaliacao.html
+++ b/04 - JavaScript/Avaliação/Avaliacao.html
@@ -46,10 +46,11 @@
             Carrinho <span class="badge text-bg-secondary" id="cartButton">0</span>
           </button>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" id="termo" placeholder="Busca" onkeyup="if(event.keyCode == 13){buscar()}" aria-label="Search">
-          <button class="btn btn-outline-success" type="button" onclick="buscar()">Procurar</button>
-        </form>
+          <div style="display: flex">
+            <input class="form-control me-2" id="termo" placeholder="Busca" onkeyup="if(event.keyCode == 13){buscar()}" aria-label="Search">
+            <button class="btn btn-outline-success" type="button" onclick="buscar()">Procurar</button>
+          </div>
+        
       </div>
     </div>
   </nav>
